Edit .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /M101J/handout/installing_and_using_maven/m101j_week1_examples/m101j_week1_examples/target/
 /M101J/handout/java_driver_representing_documents/Week_2/Week 2/target/
 /M101J/homework/homework_2_1/spark-freemarker-mongodb/spark-freemarker-mongodb/target/
+/M101J/homework/homework_3_2_mongoproc/blog/target/
