Edit .gitignore Edit README.md

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /M101J/handout/java_driver_representing_documents/Week_2/Week 2/target/
 /M101J/homework/homework_2_1/spark-freemarker-mongodb/spark-freemarker-mongodb/target/
 /M101J/homework/homework_3_2_mongoproc/blog/target/
+/cp3-nl/Debug/
