Add ex-1.2.3 code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /M101J/homework/homework_2_1/spark-freemarker-mongodb/spark-freemarker-mongodb/target/
 /M101J/homework/homework_3_2_mongoproc/blog/target/
 /cp3-nl/Debug/
+/cp3-nl/.cproject
+cp3-nl/.cproject
+/cp3-nl/.project
+cp3-nl/.project
+cp3-nl/.settings/
+/cp3-nl/.settings/
+
